# anime-rank

./: .gitignore  README.md  pyproject.toml
anime_rank/: __init__.py  cli.py  client.py  display.py
tests/: conftest.py  test_cli.py  test_client.py  test_display.py
