[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-rank"
version = "1.0.0"
description = "A beautiful CLI tool for exploring anime stats via MyAnimeList"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Orianna Arvelo Ramirez", email = "oriannadev@gmail.com"},
]
keywords = ["anime", "cli", "myanimelist", "jikan", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/oriannadev/anime-rank"
Repository = "https://github.com/oriannadev/anime-rank"
Issues = "https://github.com/oriannadev/anime-rank/issues"

[project.scripts]
anime-rank = "anime_rank.cli:main"

[tool.setuptools.packages.find]
include = ["anime_rank*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
